# jumpstart

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  MANIFEST.in  MIT-LICENSE  Makefile  README.md  justfile  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: pre-commit.yaml
index/7zip/: install.sh  metadata.json  remove.sh  status.sh
index/TerminalImageViewer/: install.sh  metadata.json  status.sh
index/alacritty/: install.sh  metadata.json
index/anki/: metadata.json  status.sh
index/aptitude/: metadata.json  status.sh
index/arandr/: install.sh  metadata.json  status.sh
index/arduino-ide/: install.sh  metadata.json  remove.sh  setup.sh
index/autojump/: metadata.json
index/backgrounds/: metadata.json
index/bash/: metadata.json
index/bashtop/: install.sh  metadata.json  remove.sh  status.sh
index/bat/: metadata.json  remove.sh  setup.sh  status.sh
index/beekeeper-studio/: install.sh  metadata.json  remove.sh  status.sh
index/blender/: install.sh  metadata.json  remove.sh  status.sh
index/bpytop/: metadata.json  remove.sh  status.sh
index/btop++/: metadata.json
index/calibre/: install.sh  metadata.json
index/cheat/: install.sh  metadata.json  remove.sh
index/checkinstall/: install.sh  metadata.json  status.sh
index/chrome/: install.sh  metadata.json  status.sh
index/clamav/: metadata.json
index/clipster/: install.sh  metadata.json  status.sh
index/cmus/: install.sh  metadata.json  status.sh
index/combine/: metadata.json
index/cookiecutter/: install.sh  metadata.json  remove.sh  status.sh
index/cpod/: install.sh  metadata.json  status.sh
index/curl/: metadata.json  remove.sh  status.sh
index/dconf-editor/: metadata.json  status.sh
index/disk-space/: metadata.json  status.sh
index/disk_space/: install.sh  remove.sh
index/dmenu/: metadata.json  remove.sh  status.sh
index/docker/: install.sh  metadata.json  status.sh
index/docker-compose/: deps.txt  install.sh  metadata.json
index/docker_compose/: install.sh
index/dos2unix/: install.sh  metadata.json  remove.sh  status.sh
index/duf/: install.sh  metadata.json  remove.sh  status.sh
index/dunst/: install.sh  metadata.json  status.sh
index/dust/: metadata.json  remove.sh
index/entr/: install.sh  metadata.json  remove.sh  status.sh
index/exa/: install.sh  metadata.json  remove.sh
index/exfat/: deps.txt  install.sh  metadata.json  remove.sh  status.sh
index/fd-find/: install.sh  metadata.json  remove.sh  status.sh
index/firewall-gui/: metadata.json  status.sh
index/firewall_gui/: install.sh  remove.sh
index/flameshot/: install.sh  metadata.json  status.sh
index/font-awesome/: install.sh  metadata.json  status.sh
index/fonts-powerline/: metadata.json
index/freecad/: deps.txt  install.sh  metadata.json  status.sh
index/fzf/: install.sh  metadata.json  remove.sh  status.sh
index/git/: install.sh  metadata.json  remove.sh  status.sh
index/github-desktop/: metadata.json
index/gitkraken/: metadata.json
index/gnome-tweak-tool/: deps.txt  metadata.json  remove.sh  status.sh
index/gnome_tweak_tool/: install.sh
index/go/: metadata.json
index/goxel/: deps.txt  install.sh  metadata.json  status.sh
index/gparted/: metadata.json
index/gprof2dot/: install.sh  metadata.json
index/greenclip/: metadata.json
index/gromit-mpx/: metadata.json  status.sh
index/grsync/: install.sh  metadata.json  status.sh
index/hugo/: metadata.json
index/i3/: deps.txt  install.sh  metadata.json  status.sh
index/i3-gaps/: install.sh  metadata.json  status.sh
index/i3_gaps/: install.sh
index/imagemagick/: metadata.json
index/inkscape/: install.sh  metadata.json  remove.sh  status.sh
index/java/: metadata.json  remove.sh  status.sh
index/jetbrains-mono-font/: metadata.json
index/jiq/: metadata.json
index/jq/: install.sh  metadata.json  status.sh
index/jqed/: metadata.json
index/lf/: install.sh  metadata.json  remove.sh
index/libre-office/: metadata.json
index/linux-utils/: deps.txt  metadata.json
index/linux_utils/: deps.txt
index/lmms/: install.sh  metadata.json  status.sh
index/magicavoxel/: metadata.json
index/materia-theme/: install.sh  metadata.json  status.sh
index/meld/: install.sh  metadata.json  remove.sh  status.sh
index/miniconda/: install.sh  metadata.json
index/miniforge/: install.sh  metadata.json
index/moka-icon-theme/: install.sh  metadata.json  status.sh
index/moreutils/: metadata.json  status.sh
index/mupdf/: install.sh  metadata.json  status.sh
index/mutt/: install.sh  metadata.json  remove.sh  status.sh
index/nautilus-plugins/: install.sh  metadata.json  remove.sh  status.sh
index/neofetch/: install.sh  metadata.json  remove.sh  status.sh
index/neovim/: deps.txt  install.sh  metadata.json  status.sh  update.sh
index/nerd-fonts/: metadata.json  remove.sh
index/networking/: deps.txt  install.sh  metadata.json  status.sh
index/nextcloud/: deps.txt  metadata.json
index/nmap/: metadata.json
index/nodejs/: install.sh  metadata.json  status.sh
index/nomacs/: install.sh  metadata.json  remove.sh  (+1 more)
jumpstart/: __init__.py  cli.py  cli_fcns.py  cli_utils.py  commands.py  constants.py  core.py  generate-status-files.py  json_schemas.py  utils.py
provision/: Dockerfile-ubuntu  Dockerfile-ubuntu-20.04  Dockerfile-ubuntu-22.04  docker-ubuntu-setup.sh  type-test.sh
python-source/: MANIFEST.in  requirements-dev.txt  requirements.txt  setup.py
(+1064 files in other folders)
