# vim: ft=dosini


[build-system]
requires = ["setuptools >= 35.0.2", "wheel >= 0.29.0"]
build-backend = "setuptools.build_meta"

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py38

[testenv]
autoupgrade_pip = true
platform = linux|darwin
deps =
    -rrequirements.txt
    -rrequirements-dev.txt
commands = pytest
"""

[tool.isort]
profile = "black"
multi_line_output = 3
import_heading_stdlib = "stdlib imports"
import_heading_firstparty = "1st party imports"
import_heading_localfolder = "local imports"
import_heading_thirdparty = "3rd party imports"
force_sort_within_sections = true

[tool.black]
line-length = 121

# https://mypy.readthedocs.io/en/latest/config_file.html#config-precedence
# https://blog.wolt.com/engineering/2021/09/30/professional-grade-mypy-configuration/
[tool.mypy]
exclude = [
    'venv',
    'tests',
    'bin',
]
plugins = [
    'marshmallow_dataclass.mypy',
]
python_version = "3.8"
show_error_codes = true
strict = true
implicit_reexport = true
#warn_return_any = false
#allow_untyped_defs = true

[tool.pytest.ini_options]
python_files = ["test_*.py", "*_test.py"]
addopts = "--failed-first --showlocals -ra"
# Run in parallel ->  --numprocesses auto
