[tool.poetry]
name = "jumpstart"
version = "0.1.0"
description = ""
authors = []
license = "MIT"
packages = [
    { include = "jumpstart" },
]
include = [
    "jumpstart/templates/*" ,
    "packages/*",
]
# exclude = ["my_package/excluded.py"]
[tool.poetry.scripts]
jumpstart = 'jumpstart.commands:run_cli'

#[tool.poetry.plugins."blogtool.parsers"]
#".rst" = "some_module:SomeClass"

[tool.poetry.urls]
"Github Repository" = "https://github.com/imochoa/jumpstart"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.dependencies]
python = "^3.10"
loguru = "^0.6.0"
rich-cli = "^1.8.0"
typer = "^0.7.0"
marshmallow = "^3.19.0"
marshmallow-dataclass = "^8.5.11"
cogapp = "^3.3.0"
marshmallow-polyfield = "^5.11"
#typing-inspect = "^0.7.1, !=0.8.0"
# 0.8.0 was problematic

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.0.4"
pytest = "^7.2.1"
pytest-icdiff = "^0.6"
pytest-xdist = "^3.1.0"
pytest-sugar = "^0.9.6"
docker = "^6.0.1"
loguru = "^0.6.0"

[tool.isort]
profile = "black"
multi_line_output = 3
import_heading_stdlib = "stdlib imports"
import_heading_firstparty = "1st party imports"
import_heading_localfolder = "local imports"
import_heading_thirdparty = "3rd party imports"
force_sort_within_sections = true

[tool.black]
line-length = 121

[tool.mypy]
python_version = "3.10"
exclude = [
    'venv',
    '.venv',
    'tests',
    'bin',
    'back',
]
# marshmallow_dataclass.mypy -> Required so that mypy recognizes the custom marshmallow NewType's
plugins = [
    'marshmallow_dataclass.mypy',
]
warn_unused_configs = true
warn_unused_ignores = true
show_error_codes = true
strict = true
implicit_reexport = true
warn_return_any = false
allow_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "back.*",
]
ignore_errors = true
follow_imports = "skip"
ignore_missing_imports = true

[tool.pytest.ini_options]
python_files = ["test_*.py", "*_test.py"]
addopts = "--failed-first --showlocals -ra"
# Run in parallel ->  --numprocesses auto

[tool.bandit]
exclude_dirs = ["venv", ".venv", "tests"]
skips = ["B101", "B603", "B404", "B108", "B110", "B311"]

# vim: ft=dosini
